tested update : Commit 2

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Auth0-VanillaJS</title>
+    <title>Auth0-VanillaJS test</title>
     <meta charset="utf-8">
 
     <!-- Auth0 lock script -->
@@ -14,7 +14,7 @@
   </head>
   <body>
     <img alt="avatar" id="avatar" style="display:none;">
-    <p>Welcome Guys !!<span id="nickname"></span></p>
+    <p>Welcome Guys Edition 2!!<span id="nickname"></span></p>
     <button type="submit" id="btn-login">Sign In</button>
     <button type="submit" id="btn-logout" style="display:none;">Sign Out</button>
   </body>
